--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,21 @@ matrix:
     allow_failures:
         - env: functionalTests=true
     
-install: pip install -r dev-requirements.txt
-script: nosetests tests
+install: 
+    - if [[ $functionalTests == "true" ]]; then
+         python setup.py install
+      else
+          pip install -r dev-requirements.txt
+      fi
+
+before_script:
+    - if [[ $functionalTests == "true" ]]; then
+        cd "tests/functional/osx"
+      fi
+      
+script:
+    - if [[ $functionalTests == "true" ]]; then
+        sh tests.sh
+      else
+        nosetests tests
+      fi
